unpackaged/main/default/objects/ServiceTerritoryMember/ServiceTerritoryMember.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>