unpackaged/main/default/objects/ServiceTerritoryMember/fields/Currently_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Currently_Scheduled__c</fullName>
    <formula>ServiceResource.Currently_Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Schedule</label>
    <type>Checkbox</type>
</CustomField>