unpackaged/main/default/objects/ServiceTerritoryMember/fields/FSL_Expired_Resource_Territory__c.field-meta.xml
<CustomField>
    <fullName>FSL_Expired_Resource_Territory__c</fullName>
    <description>To determine if the end date is in the past</description>
    <formula>IF(EffectiveEndDate &lt;= NOW(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Resource Territory</label>
    <type>Checkbox</type>
</CustomField>