unpackaged/main/default/objects/ServiceTerritoryMember/fields/FSL_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>FSL_Part_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the resource will have the option to select this as a Primary Facility on Login</description>
    <inlineHelpText>If selected, the resource will have the option to select this as a Primary Facility on Login</inlineHelpText>
    <label>Part Time</label>
    <type>Checkbox</type>
</CustomField>