unpackaged/main/default/objects/ServiceTerritoryMember/fields/FSL_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>FSL_Territory_Name__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>