unpackaged/main/default/objects/ServiceTerritoryMember/fields/Off_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Off_Schedule__c</fullName>
    <formula>NOT (ServiceResource.Currently_Scheduled__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Schedule</label>
    <type>Checkbox</type>
</CustomField>